force-app/main/default/objects/WorkOrder/fields/Acceptance_Status__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Status__c</fullName>
    <label>Acceptance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>