force-app/main/default/objects/WorkOrder/fields/Case_Progress1__c.field-meta.xml
<CustomField>
    <fullName>Case_Progress1__c</fullName>
    <formula>( WOLIs_completadas__c  /  Todas_las_WOLI__c  )</formula>
    <label>Case Progress1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>