force-app/main/default/objects/WorkOrder/fields/CoIT_Address__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Address__c</fullName>
    <label>Destination Address</label>
    <type>Address</type>
</CustomField>