force-app/main/default/objects/WorkOrder/fields/CoIT_Associate_Image_Click__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Associate_Image_Click__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Associate Image Click</label>
    <type>Checkbox</type>
</CustomField>