force-app/main/default/objects/WorkOrder/fields/CoIT_Authorization_Number__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Authorization_Number__c</fullName>
    <label>Número Autorización</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>