force-app/main/default/objects/WorkOrder/fields/CoIT_Autoriza_la_reparacion__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Autoriza_la_reparacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Autoriza la reparación?</label>
    <type>Checkbox</type>
</CustomField>