force-app/main/default/objects/WorkOrder/fields/CoIT_Causa__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Causa__c</fullName>
    <label>Causa</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>