force-app/main/default/objects/WorkOrder/fields/CoIT_Cod_Clase_Servicio__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Cod_Clase_Servicio__c</fullName>
    <label>Cod. Clase Servicio</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>