force-app/main/default/objects/WorkOrder/fields/CoIT_Codigo_del_Servicio__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Codigo_del_Servicio__c</fullName>
    <label>Código del Servicio</label>
    <length>200</length>
    <type>Text</type>
</CustomField>