force-app/main/default/objects/WorkOrder/fields/CoIT_Codigo_Servicio__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Codigo_Servicio__c</fullName>
    <label>Codigo Servicio</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>