force-app/main/default/objects/WorkOrder/fields/CoIT_Complemento_Direccion_Inicio__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Complemento_Direccion_Inicio__c</fullName>
    <label>Complemento Dirección Inicio</label>
    <length>200</length>
    <type>Text</type>
</CustomField>