force-app/main/default/objects/WorkOrder/fields/CoIT_Costo_de_Servicio__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Costo_de_Servicio__c</fullName>
    <label>Costo de Servicio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>