force-app/main/default/objects/WorkOrder/fields/CoIT_Critical__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Critical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Crítico</label>
    <type>Checkbox</type>
</CustomField>