force-app/main/default/objects/WorkOrder/fields/CoIT_Describa_la_Accesibilidad__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Describa_la_Accesibilidad__c</fullName>
    <label>Condiciones de Accesibilidad</label>
    <length>130000</length>
    <type>Html</type>
</CustomField>