force-app/main/default/objects/WorkOrder/fields/CoIT_Describa_la_Afectacion__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Describa_la_Afectacion__c</fullName>
    <label>Afectación</label>
    <length>130000</length>
    <type>Html</type>
</CustomField>