force-app/main/default/objects/WorkOrder/fields/CoIT_Diagnostico__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Diagnostico__c</fullName>
    <label>Diagnóstico</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>