force-app/main/default/objects/WorkOrder/fields/CoIT_Direccion_Destino_Complemento__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Direccion_Destino_Complemento__c</fullName>
    <label>Complemento Dirección Destino</label>
    <length>200</length>
    <type>Text</type>
</CustomField>