force-app/main/default/objects/WorkOrder/fields/CoIT_Distrito__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Distrito__c</fullName>
    <label>Distrito</label>
    <length>60</length>
    <type>Text</type>
</CustomField>