force-app/main/default/objects/WorkOrder/fields/CoIT_Documento_Asegurado__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Documento_Asegurado__c</fullName>
    <label>Documento Asegurado</label>
    <length>200</length>
    <type>Text</type>
</CustomField>