force-app/main/default/objects/WorkOrder/fields/CoIT_Documento_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Documento_Supervisor__c</fullName>
    <label>Documento Supervisor</label>
    <length>64</length>
    <type>Text</type>
</CustomField>