force-app/main/default/objects/WorkOrder/fields/CoIT_Documento_Tecnico__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Documento_Tecnico__c</fullName>
    <label>Documento Tecnico</label>
    <length>64</length>
    <type>Text</type>
</CustomField>