force-app/main/default/objects/WorkOrder/fields/CoIT_Email_Asegurado__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Email_Asegurado__c</fullName>
    <label>Email Asegurado</label>
    <length>80</length>
    <type>Text</type>
</CustomField>