force-app/main/default/objects/WorkOrder/fields/CoIT_Email_Solicitante__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Email_Solicitante__c</fullName>
    <label>Email Solicitante</label>
    <type>Email</type>
</CustomField>