force-app/main/default/objects/WorkOrder/fields/CoIT_Es_posible_reparar_el_servicio__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Es_posible_reparar_el_servicio__c</fullName>
    <label>¿Es posible reparar el servicio?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>