force-app/main/default/objects/WorkOrder/fields/CoIT_Expected_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Expected_Completed_Date__c</fullName>
    <label>Expected Completed Date</label>
    <type>DateTime</type>
</CustomField>