force-app/main/default/objects/WorkOrder/fields/CoIT_Expected_InProgress_Start__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Expected_InProgress_Start__c</fullName>
    <label>Expected In Progress Start</label>
    <type>DateTime</type>
</CustomField>