force-app/main/default/objects/WorkOrder/fields/CoIT_Expected_Travel_Start__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Expected_Travel_Start__c</fullName>
    <label>Expected Travel Start</label>
    <type>DateTime</type>
</CustomField>