force-app/main/default/objects/WorkOrder/fields/CoIT_Garantia__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Garantia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Garantía</label>
    <type>Checkbox</type>
</CustomField>