force-app/main/default/objects/WorkOrder/fields/CoIT_Inquietud_del_Servicio__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Inquietud_del_Servicio__c</fullName>
    <label>Inquietud del Servicio</label>
    <length>200</length>
    <type>Text</type>
</CustomField>