force-app/main/default/objects/WorkOrder/fields/CoIT_Is_AutomaticDispatched__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Is_AutomaticDispatched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Automatic Dispatched</label>
    <type>Checkbox</type>
</CustomField>