force-app/main/default/objects/WorkOrder/fields/CoIT_Is_Failed_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Is_Failed_Acceptance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Failed Acceptance?</label>
    <type>Checkbox</type>
</CustomField>