force-app/main/default/objects/WorkOrder/fields/CoIT_Is_Failed_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Is_Failed_In_Progress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Failed In Progress?</label>
    <type>Checkbox</type>
</CustomField>