force-app/main/default/objects/WorkOrder/fields/CoIT_Is_Failed_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Is_Failed_Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Failed Scheduled?</label>
    <type>Checkbox</type>
</CustomField>