force-app/main/default/objects/WorkOrder/fields/CoIT_Lista_de_Numeros__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Lista_de_Numeros__c</fullName>
    <label>Lista de Numeros</label>
    <length>200</length>
    <type>Text</type>
</CustomField>