force-app/main/default/objects/WorkOrder/fields/CoIT_Marca__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Marca__c</fullName>
    <label>Marca</label>
    <length>64</length>
    <type>Text</type>
</CustomField>