force-app/main/default/objects/WorkOrder/fields/CoIT_Motivo_de_la_solicitud_del_servicio__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Motivo_de_la_solicitud_del_servicio__c</fullName>
    <label>Motivo de la solicitud del servicio</label>
    <length>200</length>
    <type>Text</type>
</CustomField>