force-app/main/default/objects/WorkOrder/fields/CoIT_Necesidad_Cliente__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Necesidad_Cliente__c</fullName>
    <label>Necesidad Cliente</label>
    <length>200</length>
    <type>Text</type>
</CustomField>