force-app/main/default/objects/WorkOrder/fields/CoIT_Nombre_Asegurado__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Nombre_Asegurado__c</fullName>
    <label>Nombre Asegurado</label>
    <length>200</length>
    <type>Text</type>
</CustomField>