force-app/main/default/objects/WorkOrder/fields/CoIT_Nombre_Solicitante__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Nombre_Solicitante__c</fullName>
    <label>Nombre Solicitante</label>
    <length>200</length>
    <type>Text</type>
</CustomField>