force-app/main/default/objects/WorkOrder/fields/CoIT_Nombre_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Nombre_Supervisor__c</fullName>
    <label>Nombre Supervisor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>