force-app/main/default/objects/WorkOrder/fields/CoIT_Nombre_Tecnico__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Nombre_Tecnico__c</fullName>
    <label>Nombre Tecnico</label>
    <length>255</length>
    <type>Text</type>
</CustomField>