force-app/main/default/objects/WorkOrder/fields/CoIT_Numero_de_Llamada__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Numero_de_Llamada__c</fullName>
    <label>Nùmero de Llamada</label>
    <length>10</length>
    <type>Text</type>
</CustomField>