force-app/main/default/objects/WorkOrder/fields/CoIT_Numero_Siniestro__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Numero_Siniestro__c</fullName>
    <externalId>true</externalId>
    <label>Número Siniestro</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>