force-app/main/default/objects/WorkOrder/fields/CoIT_Partner_Location__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Partner_Location__c</fullName>
    <label>Ubicación del proveedor</label>
    <type>Address</type>
</CustomField>