force-app/main/default/objects/WorkOrder/fields/CoIT_Region__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Region__c</fullName>
    <label>Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>