force-app/main/default/objects/WorkOrder/fields/CoIT_Requerimientos_del_cliente__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Requerimientos_del_cliente__c</fullName>
    <label>Requerimientos del cliente</label>
    <length>200</length>
    <type>Text</type>
</CustomField>