force-app/main/default/objects/WorkOrder/fields/CoIT_Require_Auto_Schedule_SA__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Require_Auto_Schedule_SA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require Auto Schedule SA</label>
    <type>Checkbox</type>
</CustomField>