force-app/main/default/objects/WorkOrder/fields/CoIT_Require_Scalated_By_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Require_Scalated_By_Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require Scalated By Scheduled</label>
    <type>Checkbox</type>
</CustomField>