force-app/main/default/objects/WorkOrder/fields/CoIT_Servicio_mediante_videollamada__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Servicio_mediante_videollamada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Servicio mediante videollamada?</label>
    <type>Checkbox</type>
</CustomField>