force-app/main/default/objects/WorkOrder/fields/CoIT_Technician__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Técnico</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>