force-app/main/default/objects/WorkOrder/fields/CoIT_Telefono_Asegurado__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Telefono_Asegurado__c</fullName>
    <label>Teléfono Asegurado</label>
    <length>200</length>
    <type>Text</type>
</CustomField>