force-app/main/default/objects/WorkOrder/fields/CoIT_ThirdScheduling_PolicyUsed__c.field-meta.xml
<CustomField>
    <fullName>CoIT_ThirdScheduling_PolicyUsed__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Third Scheduling Policy Used</label>
    <referenceTo>FSL__Scheduling_Policy__c</referenceTo>
    <relationshipLabel>Work Orders (Third Scheduling Policy Used)</relationshipLabel>
    <relationshipName>Work_Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>