force-app/main/default/objects/WorkOrder/fields/CoIT_Upload_DropOff__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Upload_DropOff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upload Drop Off</label>
    <type>Checkbox</type>
</CustomField>