force-app/main/default/objects/WorkOrder/fields/CoIT_ValidateScheduling__c.field-meta.xml
<CustomField>
    <fullName>CoIT_ValidateScheduling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validate Scheduling</label>
    <type>Checkbox</type>
</CustomField>