force-app/main/default/objects/WorkOrder/fields/CoIT_WOM_Arrival_Window_End__c.field-meta.xml
<CustomField>
    <fullName>CoIT_WOM_Arrival_Window_End__c</fullName>
    <label>Arrival Window End</label>
    <type>DateTime</type>
</CustomField>