force-app/main/default/objects/WorkOrder/fields/CoIT_WOM_Arrival_Window_Start__c.field-meta.xml
<CustomField>
    <fullName>CoIT_WOM_Arrival_Window_Start__c</fullName>
    <label>Arrival Window Start</label>
    <type>DateTime</type>
</CustomField>