force-app/main/default/objects/WorkOrder/fields/CoIT_WOM_Business_Line__c.field-meta.xml
<CustomField>
    <fullName>CoIT_WOM_Business_Line__c</fullName>
    <label>Business Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CoIT_WOM_Business_Line</valueSetName>
    </valueSet>
</CustomField>