force-app/main/default/objects/WorkOrder/fields/CoIT_WOM_Requires_Repair_Plan__c.field-meta.xml
<CustomField>
    <fullName>CoIT_WOM_Requires_Repair_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Repair Plan</label>
    <type>Checkbox</type>
</CustomField>