force-app/main/default/objects/WorkOrder/fields/CoIT_WOM_Scheduling_Policy_Used__c.field-meta.xml
<CustomField>
    <fullName>CoIT_WOM_Scheduling_Policy_Used__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheduling Policy Used</label>
    <referenceTo>FSL__Scheduling_Policy__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>