force-app/main/default/objects/WorkOrder/fields/CoIT_WOM_Scheduling_type__c.field-meta.xml
<CustomField>
    <fullName>CoIT_WOM_Scheduling_type__c</fullName>
    <label>Scheduling type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CoIT_WOM_Scheduling_Type</valueSetName>
    </valueSet>
</CustomField>