force-app/main/default/objects/WorkOrder/fields/CoIT_WOM_Waiting_for_Candidates_Finished__c.field-meta.xml
<CustomField>
    <fullName>CoIT_WOM_Waiting_for_Candidates_Finished__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Waiting for Candidates Finished</label>
    <type>Checkbox</type>
</CustomField>