force-app/main/default/objects/WorkOrder/fields/CoIT_WOM_WasCreatedByIntegration__c.field-meta.xml
<CustomField>
    <fullName>CoIT_WOM_WasCreatedByIntegration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Was Created by Integration</label>
    <type>Checkbox</type>
</CustomField>