force-app/main/default/objects/WorkOrder/fields/CoIT_WorkOfferQuantity__c.field-meta.xml
<CustomField>
    <fullName>CoIT_WorkOfferQuantity__c</fullName>
    <label>Work Offer Quantity</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>