force-app/main/default/objects/WorkOrder/fields/habitability__c.field-meta.xml
<CustomField>
    <fullName>habitability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>habitability</label>
    <type>Checkbox</type>
</CustomField>