force-app/main/default/objects/WorkOrder/fields/Numero_autorizacion2__c.field-meta.xml
<CustomField>
    <fullName>Numero_autorizacion2__c</fullName>
    <formula>Case.CoIT_Numero_Autorizacion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numero autorizacion</label>
    <type>Text</type>
</CustomField>