force-app/main/default/objects/WorkOrder/fields/se_requiere_alojamiento__c.field-meta.xml
<CustomField>
    <fullName>se_requiere_alojamiento__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Se requiere alojamiento?</label>
    <type>Checkbox</type>
</CustomField>