force-app/main/default/objects/WorkOrder/fields/Todas_las_WOLI__c.field-meta.xml
<CustomField>
    <fullName>Todas_las_WOLI__c</fullName>
    <label>Todas las WOLI</label>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>