force-app/main/default/objects/WorkOrder/fields/WOLIs_completadas__c.field-meta.xml
<CustomField>
    <fullName>WOLIs_completadas__c</fullName>
    <label>WOLIs completadas</label>
    <summaryFilterItems>
        <field>WorkOrderLineItem.Status</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>