force-app/main/default/objects/WorkOrder/recordTypes/Autos.recordType-meta.xml
<RecordType>
    <fullName>Autos</fullName>
    <active>true</active>
    <label>Autos</label>
</RecordType>