force-app/main/default/objects/WorkOrder/recordTypes/Hogares.recordType-meta.xml
<RecordType>
    <fullName>Hogares</fullName>
    <active>true</active>
    <label>Hogares</label>
</RecordType>