force-app/main/default/objects/WorkOrder/validationRules/Change_Record_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Change_Record_Type</fullName>
    <active>true</active>
    <description>No puede cambiar el record type de una work order para los perfiles de Manager y Leader</description>
    <errorConditionFormula>AND(
    ISCHANGED(RecordTypeId),
    OR(
        $Profile.Name = &quot;CoIT Bolivar Manager Profile&quot;,
        $Profile.Name = &quot;CoIT Bolivar Leader Profile&quot;
    )
)</errorConditionFormula>
    <errorMessage>No tienes permisos para cambiar el tipo de registro.</errorMessage>
</ValidationRule>