force-app/main/default/objects/WorkOrder/validationRules/Work_Order_Complete.validationRule-meta.xml
<ValidationRule>
    <fullName>Work_Order_Complete</fullName>
    <active>false</active>
    <errorConditionFormula>IF(  ISPICKVAL( PRIORVALUE(Status), &apos;Completed&apos;) , true, false)</errorConditionFormula>
    <errorMessage>No puede modificar una Orden de trabajo que ya ha sido completada</errorMessage>
</ValidationRule>