force-app/main/default/objects/WorkOrder/listViews/All_WorkOrders.listView-meta.xml
<ListView>
    <fullName>All_WorkOrders</fullName>
    <columns>Name</columns>
    <columns>Case</columns>
    <columns>CoIT_Numero_Siniestro__c</columns>
    <columns>CoIT_Authorization_Number__c</columns>
    <columns>CoIT_Nombre_Asegurado__c</columns>
    <columns>Subject</columns>
    <columns>WorkType</columns>
    <columns>Account</columns>
    <columns>Status</columns>
    <columns>CreatedDate</columns>
    <columns>RecordType</columns>
    <columns>Owner</columns>
    <filterScope>Everything</filterScope>
    <label>Todas las órdenes de trabajo</label>
</ListView>